fixes spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,7 @@ h6 {
 }
 
 .mrg-btm {
-    margin-bottom: 8rem;
+    margin-bottom: 5rem;
 }
 
 .about-mrg {
@@ -169,6 +169,11 @@ h6 {
 
 .img-mrg {
     margin: 2em 0 2em 0;
+}
+
+.landing-mrg {
+    margin-top: 7.5rem;
+    margin-bottom: 3.5rem;
 }
 
 .footer,
